fix display of skills item and profile picture on mobile devices

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -3,6 +3,9 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  @media (max-width: 480px) {
+    align-items: flex-start;
+  }
 }
 
 .aboutme__skills-item {
@@ -13,7 +16,7 @@
   width: 15%;
   margin: 1rem;
   @media (max-width: 480px) {
-    width: 20%;
+    width: 21%;
     margin: 1.2rem;
   }
 
@@ -43,6 +46,7 @@
     font-size: 0.9rem;
     font-weight: 600;
     text-transform: uppercase;
+    text-align: center;
     letter-spacing: 0.1rem;
     @media (max-width: 480px) {
       font-size: 0.6rem;
