--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -16,6 +16,7 @@
   align-items: flex-end;
   position: relative;
   @media (max-width: 480px) {
+    min-height: 90vh;
     justify-content: flex-end;
     object-fit: contain;
   }
@@ -25,7 +26,7 @@
     object-fit: contain;
     z-index: 1;
     @media (max-width: 480px) {
-      width: 100%;
+      right: 0;
     }
   }
 
@@ -41,8 +42,9 @@
       bottom: -10%;
     }
     @media (max-width: 480px) {
+      height: 75%;
       right: -35%;
-      bottom: -5%;
+      bottom: -10%;
     }
   }
 }
